[metadata]
name = sphinxcontrib.svgbob
version = attr: sphinxcontrib.svgbob.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
home_page = https://github.com/althonos/sphinxcontrib.svgbob
description = A Sphinx extension to convert ASCII diagrams to SVGs with Svgbob.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
keywords = sphinx, documentation, svg, diagram, ascii
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Rust
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
project_urls =
    Bug Tracker = https://github.com/althonos/sphinxcontrib.svgbob/issues
    Changelog = https://github.com/althonos/sphinxcontrib.svgbob/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = sphinxcontrib.svgbob
test_suite = tests
setup_requires =
    setuptools >=46.4
    setuptools-rust >=0.12
install_requires =
    sphinx

[options.package_data]
sphinxcontrib.svgbob = py.typed

[sdist]
formats = zip, gztar

[coverage:run]
parallel = true

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
